--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>React App</title>
   </head>
   <body>
-    <script src="./src/components.js" type="text/jsx"></script>
+    <script src="./src/index.js" type="text/jsx"></script>
     <div id="root"></div>
   </body>
 </html>
